--- a/src/app/components/opening/opening.component.css
+++ b/src/app/components/opening/opening.component.css
@@ -1,3 +1,4 @@
+
 .background {
     background-image: url('../../../assets/images/screen.jpg');
     display: flex;
@@ -10,13 +11,47 @@
 }
 
 .terminal-window {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    background-color: rgb(155 155 155);
+    position: relative;
+    min-width: 800px;
+    max-width: 70vw;
+    height: 35px;
+    top: -35px;
+    left: -30px;
+}
+
+.terminal-window > * {
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    font-family: "Source Code Pro", monospace;
+    font-weight: 300;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    cursor: pointer;
+}
+
+
+.square{
+    font-size: 18px;
+    margin-top: -2px;
+}
+
+
+.terminal-tab {
+    display: flex;
+    justify-content: space-between;
     position: relative;
     width: 180px;
-    height: 40px;
-    top: -33px;
+    height: 35px;
+    top: -70px;
     left: -30px;
     background-color: black;
-    border-radius: 5px;
+    border-radius: 0px 5px 0px 0px;
     padding: 8px 10px;
     font-size: 14px;
     color: white;
@@ -27,15 +62,25 @@
 .terminal {
     background-color: black;
     padding: 0 30px;
-    min-width: 70vw;
+    min-width: 800px;
+    max-width: 70vw;
     min-height: 35vh;
-    border-radius: 5px;
+    border-radius: 0px 0px 5px 5px;
     z-index: 1;
+}
+
+.text-box {
+    position: relative;
+    top:-40px;
 }
 
 .typed-text {
     font-size: 20px;
     color: white;
     font-family: "Source Code Pro", monospace;
+    font-weight: 300;
 }
 
+.hover{
+    cursor: pointer;
+}
