--- a/src/app/components/opening/opening.component.html
+++ b/src/app/components/opening/opening.component.html
@@ -1,7 +1,14 @@
 <div class='background'>
     <div class="terminal">
-        <div class="terminal-window">Terminal</div>
-        <span id="first-line" class="typed-text"><!-- content will be typed here --></span>
-        <span id="second-line" class="typed-text"><!-- content will be typed here --></span>
+        <div class="terminal-window">
+            <span>-</span>
+            <span class="square">&#9633;</span>
+            <span>x</span>
+        </div>
+        <div class="terminal-tab"><label>Terminal</label><label class="hover">x</label></div>
+        <div class="text-box">
+            <span id="first-line" class="typed-text"><!-- content will be typed here --></span>
+            <span id="second-line" class="typed-text"><!-- content will be typed here --></span>
+        </div>
     </div>
 </div>
