--- a/src/app/components/opening/opening.component.html
+++ b/src/app/components/opening/opening.component.html
@@ -1,9 +1,9 @@
 <div class='background'>
     <div class="terminal">
         <div class="terminal-window">
-            <span>-</span>
-            <span class="square">&#9633;</span>
-            <span>x</span>
+            <span><img class='tab-icons' src='../../../assets/images/minimize.png'></span>
+             <span><img class='tab-icons' src='../../../assets/images/maximize.png'></span>
+            <span><img class='tab-icons' src='../../../assets/images/close.png'></span>
         </div>
         <div class="terminal-tab"><label>Terminal</label><label class="hover">x</label></div>
         <div class="text-box">
