--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -3,6 +3,13 @@
 </head>
 <body>
     <div class="background">
+        <div id="backdrop" class="backdrop">
+            <div class="loading-bar">
+                <video id="progress-bar" autoplay muted >
+                    <source src="../../../assets/videos/loading-bar.mp4" type="video/mp4">
+                </video>              
+            </div>
+        </div>
         <div id="self-container" class="container self" (click)="getToFront('self-container')">
             <div class="content">
                 <div class="container-title">Profile</div>
