--- a/src/app/components/opening/opening.component.html
+++ b/src/app/components/opening/opening.component.html
@@ -6,7 +6,7 @@
             <span><img class='tab-icons' src='../../../assets/images/close.png'></span>
         </div>
         <div class="terminal-tab"><label>Terminal</label><label class="hover">x</label></div>
-        <div class="text-box">
+        <div id="text-box" class="text-box">
             <span id="first-line" class="typed-text"><!-- content will be typed here --></span>
             <span id="second-line" class="typed-text"><!-- content will be typed here --></span>
         </div>
