--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -5,8 +5,9 @@
     <div class="background">
         <div id="backdrop" class="backdrop">
             <div class="loading-bar">
-                <video id="progress-bar" autoplay muted >
+                <video id="progress-bar" autoplay muted>
                     <source src="../../../assets/videos/loading-bar.mp4" type="video/mp4">
+                    <source src="../../../assets/videos/loading-bar.webm" type="video/webm">
                 </video>              
             </div>
         </div>
