--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -241,3 +241,98 @@
     100% { opacity: 1; }
 }
 
+@media screen and (max-width: 500px) {
+    .background {
+        background: none;
+        height: 1400px;
+    }
+
+    .backdrop {
+        height: 100vh;
+    }
+
+    .container{
+        margin: 10px 0;
+    }
+
+    .loading-bar video {
+        height: 25px;
+    }
+
+    .self {
+        top: 5vh;
+        left: 18vw;
+    }
+
+    .location {
+        width: 9rem;
+        height: 22rem;
+        top: 49vh;
+        left: 8vw;
+    }
+
+    .location img {
+        height: 19rem;
+    }
+
+    .location-animation {
+        top: 120px !important;
+        left: 30px !important;
+    }
+
+    .languages {
+        /* top: 55vh;
+        left: 55vw;
+        width: 10rem;
+        height: 17.2rem; */
+        top: 51vh;
+        left: 55vw;
+        width: 10rem;
+        height: 17.2rem;
+    }
+
+    .languages .container-title {
+        font-family: "Source Code Pro", monospace;
+        font-weight: bold;
+        font-size: 1rem;
+        color: #6f9c76;
+        width: 100%;
+        height: 4rem;
+        line-height: 1.3rem;
+        border-bottom: 0.5px solid #6f9c76;
+        padding: 10px 8px;
+    }
+
+    .courses {
+        width: 18rem;
+        height: 16.2rem;
+        top: 106vh;
+        left: 7vw;
+        animation-delay: 1.8s;
+    }
+
+    .experience {
+        /* width: 17rem;
+        height: 8.9rem;
+        top: 94vh;
+        left: 17vw;
+        animation-delay: 2s; */
+        width: 17rem;
+        height: 8.9rem;
+        top: 86vh;
+        left: 23vw;
+        animation-delay: 2s;
+    }
+
+    .experience-list {
+        display: grid;
+        grid-template-columns: 51% 22% 27%;
+        width: 95%;
+        position: relative;
+        margin: 10px auto;
+    }
+
+    .skills {
+        top: 140vh;
+    }
+}
