--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -32,9 +32,20 @@
     z-index: 10;
 }
 
-.loading-bar video {
-    height: 50px;
-}
+.progress-bar {
+    width:700px;
+    height:20px;
+    border-radius: 8px;
+    border: 1px solid #101010;
+     background:
+     repeating-linear-gradient(135deg, var(--secondary-color) 0 10px, #101010 0 20px) 0/0%   no-repeat,
+     repeating-linear-gradient(135deg,#101010   0 10px,#101010   0 20px) 0/100%;
+    animation:progress 3s forwards;
+  }
+  @keyframes progress {
+      100% {background-size:100%}
+  }
+
 
 .hidden {
     visibility: hidden;
@@ -51,7 +62,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    background-color: #2b3f2c;
+    background-color: var(--primary-color);
     cursor: move;
     z-index: 0;
     animation: fadeIn 1s forwards;
@@ -61,11 +72,11 @@
     font-family: "Source Code Pro", monospace;
     font-weight: bold;
     font-size: 1rem;
-    color: #6f9c76;
+    color: var(--secondary-color);
     width: 100%;
     height: 2rem;
     line-height: 1.8rem;
-    border-bottom: 0.5px solid #6f9c76;
+    border-bottom: 0.5px solid var(--secondary-color);
     padding: 0 8px;
 }
 
@@ -74,7 +85,7 @@
     align-items: center;
     width: 98%;
     height: 99%;
-    border: 0.5px solid #6f9c76;
+    border: 0.5px solid var(--secondary-color);
 }
 
 .bold {
@@ -84,8 +95,8 @@
 .list-item {
     font-family: "Source Code Pro", monospace;
     font-weight: 400;
-    color: #6f9c76;
-    border: 0.5px solid #6f9c76;
+    color: var(--secondary-color);
+    border: 0.5px solid var(--secondary-color);
     padding: 3px 10px;
     font-size: 0.9rem;
 }
@@ -106,7 +117,7 @@
     height: 21.1rem;
     top: 40vh;
     left: 35vw;
-    animation-delay: 1s;
+    animation-delay: 0.4s;
 }
 
 .profile-picture {
@@ -114,7 +125,7 @@
     width: 95%;
     margin: 7px 0;
     position: relative;
-    border: 0.5px solid #6f9c76;
+    border: 0.5px solid var(--secondary-color);
     margin-inline: auto;
 }
 
@@ -138,7 +149,6 @@
 
 .icon {
     height: 15px;
-    /* width: 15px; */
     margin: 0 3px;
 }
 
@@ -149,7 +159,7 @@
     height: 30rem;
     top: 15vh;
     left: 10vw;
-    animation-delay: 1.2s;
+    animation-delay: 0.6s;
 }
 
 .location img {
@@ -172,7 +182,7 @@
     height: 10.3rem;
     top: 10vh;
     left: 32vw;
-    animation-delay: 1.4s;
+    animation-delay: 0.8s;
 }
 
 .skills-list {
@@ -189,7 +199,7 @@
     height: 15.2rem;
     top: 62vh;
     left: 64vw;
-    animation-delay: 1.6s;
+    animation-delay: 1s;
 }
 
 .languages-list {
@@ -206,7 +216,7 @@
     height: 14rem;
     top: 7vh;
     left: 60vw;
-    animation-delay: 1.8s;
+    animation-delay: 1.2s;
 }
 
 .courses-list {
@@ -224,7 +234,7 @@
     height: 6.7rem;
     top: 43vh;
     left: 61vw;
-    animation-delay: 2s;
+    animation-delay: 1.4s;
 }
 
 .experience-list {
@@ -235,16 +245,90 @@
     margin: 10px auto;
 }
 
+/********* experience container *********/
+
+.fingerprint {
+    width: 10rem;
+    height: 12rem;
+    top: 43vh;
+    left: 61vw;
+    animation-delay: 1.6s;
+    padding: 3px;
+}
+
+.fingerprint-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 98%;
+    height: 80%;
+}
+
+.fingerprint-content img {
+    height: 7rem;
+    transform: rotate(20deg);
+}
+
+/********* experience container *********/
+
+.audio {
+    width: 10rem;
+    height: 12rem;
+    top: 43vh;
+    left: 61vw;
+    animation-delay: 1.8s;
+    padding: 3px;
+}
+
+
 
 @keyframes fadeIn {
     0% { opacity: 0; }
     100% { opacity: 1; }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1200px) {
+    .location {
+        width: 10rem;
+        height: 24rem;
+        left: 7vw;
+        margin: 15px;
+    }
+
+    .location img {
+        height: 21rem;
+    }
+
+    .location-animation {
+        top: 125px !important;
+        left: 35px !important;
+    }
+
+    .skills{
+        left: 27vw;
+    }
+
+    .self {
+        left: 29vw;
+    }
+
+    .courses {
+        left: 57vw;
+    }
+
+    .experience {
+        left: 58vw;
+    }
+
+}
+
+@media screen and (max-width: 550px) {
     .background {
-        background: none;
-        height: 1400px;
+        background-image: url('../../../assets/images/mobile-screen-3.png'); 
+        display: flex;
+        height: fit-content;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
     }
 
     .backdrop {
@@ -252,7 +336,7 @@
     }
 
     .container{
-        margin: 10px 0;
+        position: relative;
     }
 
     .loading-bar video {
@@ -260,15 +344,17 @@
     }
 
     .self {
-        top: 5vh;
-        left: 18vw;
+        top: 0;
+        left: 0;
+        margin: 40px;
     }
 
     .location {
         width: 9rem;
         height: 22rem;
-        top: 49vh;
-        left: 8vw;
+        top: 0;
+        left: 0;
+        margin: 15px;
     }
 
     .location img {
@@ -281,47 +367,41 @@
     }
 
     .languages {
-        /* top: 55vh;
-        left: 55vw;
-        width: 10rem;
-        height: 17.2rem; */
-        top: 51vh;
-        left: 55vw;
         width: 10rem;
         height: 17.2rem;
+        top: 0;
+        left: 0;
     }
 
     .languages .container-title {
         font-family: "Source Code Pro", monospace;
         font-weight: bold;
         font-size: 1rem;
-        color: #6f9c76;
+        color: var(--secondary-color);
         width: 100%;
         height: 4rem;
         line-height: 1.3rem;
-        border-bottom: 0.5px solid #6f9c76;
+        border-bottom: 0.5px solid var(--secondary-color);
         padding: 10px 8px;
     }
 
     .courses {
         width: 18rem;
         height: 16.2rem;
-        top: 106vh;
-        left: 7vw;
+        top: 0;
+        left: 0;
         animation-delay: 1.8s;
+        margin: 25px 0;
+
     }
 
     .experience {
-        /* width: 17rem;
-        height: 8.9rem;
-        top: 94vh;
-        left: 17vw;
-        animation-delay: 2s; */
         width: 17rem;
         height: 8.9rem;
-        top: 86vh;
-        left: 23vw;
         animation-delay: 2s;
+        top: 0;
+        left: 0;
+        margin: 25px 0;
     }
 
     .experience-list {
@@ -333,6 +413,9 @@
     }
 
     .skills {
-        top: 140vh;
+        /* top: 140vh; */
+        top: 0;
+        left: 0;
+        margin: 0 70px;
     }
 }
