feat: audio container

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -102,7 +102,6 @@
                 </div>
             </div>
         </div>
-
         <div id="fingerprint-container" class="container fingerprint" (click)="getToFront('fingerprint-container')">
             <div class="content">
                 <div class="container-title">Fingerprint</div>
@@ -111,10 +110,15 @@
                 </div>
             </div>
         </div>
-
-        <!-- finger print cotainer -->
-
-        <!-- voice detection cotainer -->
+        <div id="audio-container" class="container audio" (click)="getToFront('audio-container')">
+            <div class="content">
+                <div class="container-title">???????</div>
+                <div class="audio-content">
+                    <img src="../../../assets/images/sound-waves.png">
+                    <span>"I just love building websites so much"</span>
+                </div>
+            </div>
+        </div>
 
     </div>
 </body>
