--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -115,8 +115,8 @@
 .self {
     width: 18rem;
     height: 21.1rem;
-    top: 40vh;
-    left: 35vw;
+    top: 13vh;
+    left: 24vw;
     animation-delay: 0.4s;
 }
 
@@ -157,8 +157,8 @@
 .location {
     width: 13rem;
     height: 30rem;
-    top: 15vh;
-    left: 10vw;
+    top: 8vh;
+    left: 6vw;
     animation-delay: 0.6s;
 }
 
@@ -180,8 +180,8 @@
 .skills {
     width: 15rem;
     height: 10.3rem;
-    top: 10vh;
-    left: 32vw;
+    top: 12vh;
+    right: 5vw;
     animation-delay: 0.8s;
 }
 
@@ -196,17 +196,19 @@
 
 .languages {
     width: 15rem;
-    height: 15.2rem;
-    top: 62vh;
-    left: 64vw;
+    height: 9.85rem;
+    top: 63vh;
+    right: 15vw;
     animation-delay: 1s;
 }
 
 .languages-list {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 50% 50%;
     width: 100%;
+    width: 95%;
+    position: relative;
+    margin: 10px auto;
 }
 
 /********* courses container *********/
@@ -214,8 +216,8 @@
 .courses {
     width: 20rem;
     height: 14rem;
-    top: 7vh;
-    left: 60vw;
+    top: 64vh;
+    left: 42vw;
     animation-delay: 1.2s;
 }
 
@@ -232,8 +234,8 @@
 .experience {
     width: 25rem;
     height: 6.7rem;
-    top: 43vh;
-    left: 61vw;
+    top: 9vh;
+    left: 48vw;
     animation-delay: 1.4s;
 }
 
@@ -245,13 +247,13 @@
     margin: 10px auto;
 }
 
-/********* experience container *********/
+/********* fingerprint container *********/
 
 .fingerprint {
     width: 10rem;
     height: 12rem;
-    top: 43vh;
-    left: 61vw;
+    top: 66vh;
+    left: 22vw;
     animation-delay: 1.6s;
     padding: 3px;
 }
@@ -269,15 +271,32 @@
     transform: rotate(20deg);
 }
 
-/********* experience container *********/
+/********* audio container *********/
 
 .audio {
-    width: 10rem;
-    height: 12rem;
-    top: 43vh;
-    left: 61vw;
+    width: 30rem;
+    height: 11rem;
+    top: 31vh;
+    right: 23vw;
     animation-delay: 1.8s;
     padding: 3px;
+}
+
+.audio-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 98%;
+    height: 70%;
+}
+
+.audio-content img {
+    height: 6rem;
+}
+
+.audio-content span {
+    font-size: 0.9rem;
 }
 
 
