--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 * {
     box-sizing: border-box;
+    font-family: "Source Code Pro", monospace;
+    color: var(--secondary-color);
 }
 
 :root {
