--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -354,6 +354,10 @@
         height: 100vh;
     }
 
+    .progress-bar {
+        width: 60vw;
+    }
+
     .container{
         position: relative;
     }
@@ -386,22 +390,10 @@
     }
 
     .languages {
-        width: 10rem;
-        height: 17.2rem;
+        width: 15rem;
+        height: 10rem;
         top: 0;
         left: 0;
-    }
-
-    .languages .container-title {
-        font-family: "Source Code Pro", monospace;
-        font-weight: bold;
-        font-size: 1rem;
-        color: var(--secondary-color);
-        width: 100%;
-        height: 4rem;
-        line-height: 1.3rem;
-        border-bottom: 0.5px solid var(--secondary-color);
-        padding: 10px 8px;
     }
 
     .courses {
@@ -420,7 +412,7 @@
         animation-delay: 2s;
         top: 0;
         left: 0;
-        margin: 25px 0;
+        margin: -145px 50px;
     }
 
     .experience-list {
@@ -432,9 +424,23 @@
     }
 
     .skills {
-        /* top: 140vh; */
         top: 0;
         left: 0;
-        margin: 0 70px;
+        margin: 25px 70px;
+    }
+
+    .fingerprint {
+        top: -23vh;
+        left: 14vw;
+    }
+
+    .audio {
+        width: 26rem;
+        right: 0;
+        top:0;
+    }
+
+    .audio img {
+        height: 5rem;
     }
 }
