--- a/src/app/components/opening/opening.component.css
+++ b/src/app/components/opening/opening.component.css
@@ -55,9 +55,12 @@
     border-radius: 0px 5px 0px 0px;
     padding: 8px 10px;
     font-size: 14px;
-    color: white;
     font-family: "Source Code Pro", monospace;
     font-weight: 100;
+}
+
+.terminal-tab label {
+    color: white;
 }
 
 .terminal {
