fix: resume wrong name

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -17,7 +17,7 @@
                 <div class="profile-list">
                     <div class="list-item bold">Name</div><div class="list-item">Evelyne Gluzman</div>
                     <div class="list-item bold">Profession</div><div class="list-item">Web Developer</div>
-                    <div class="list-item bold">Resume</div><div class="list-item"><a class="link" href="../../../assets/files/resume.pdf">View Resume</a></div>
+                    <div class="list-item bold">Resume</div><div class="list-item"><a class="link" href="../../../assets/files/evelyne_resume.pdf">View Resume</a></div>
                     <div class="list-item bold">Contact</div>
                     <div class="list-item icons">
                         <a href="https://github.com/evelyne802" target=”_blank”>
