--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -91,7 +91,7 @@
         </div>
         <div id="audio-container" class="container audio" (click)="getToFront('audio-container')">
             <div class="content">
-                <div class="container-title">???????</div>
+                <div class="container-title">Last Audio Captured</div>
                 <div class="audio-content">
                     <img src="../../../assets/images/sound-waves.png">
                     <span>"I just love building websites so much"</span>
